--- a/src/components/BookingForm.module.css
+++ b/src/components/BookingForm.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-bottom: 2rem;
 }
 
 .datePicker {
@@ -30,7 +31,7 @@
 
 .bookingFormGroup input {
   border: 1px solid var(--accent-colour);
-  width: 80%;
+  width: 100%;
 }
 
 .groupsize {
