--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --font-colour: #f5f5f5;
   --hover-colour: #ffa45b;
   --accent-colour: #ff6b35;
-  --secondary-accent-colour: #ff865c;
+  --secondary-accent-colour: #f58021;
   --card-colour: #1e1e1e;
 }
 
@@ -66,8 +66,8 @@ body {
   max-width: 600px;
   width: 100%;
   margin: 2rem auto;
-  box-shadow: 0 2px 6px rgba(255, 134, 92, 0.6),
-    0 4px 12px rgba(255, 134, 92, 0.4), 0 8px 24px rgba(255, 134, 92, 0.2);
+  box-shadow: 0 2px 6px rgba(245, 128, 33, 0.6),
+    0 4px 12px rgba(245, 128, 33, 0.4), 0 8px 24px rgba(245, 128, 33, 0.2);
   transition: box-shadow 0.3s ease-in-out;
 }
 
@@ -116,7 +116,7 @@ body {
 
 .place-card:focus {
   background-color: var(--hover-colour);
-  color: #000; 
+  color: #000;
 }
 
 /* === image section === */
@@ -177,4 +177,22 @@ body {
   .place-info-services {
     font-size: 0.9rem;
   }
+}
+
+/* === styling for titles for each page === */
+.page-title {
+  font-size: 2.5rem;
+  text-align: center;
+  font-weight: 600;
+  font-family: var(--font-creepster);
+  letter-spacing: 0.15rem;
+  text-shadow: 2px 2px 4px #000, 0 0 6px #e76f51;
+  margin-top: 1rem;
+}
+
+/* === logo === */
+.logo-image {
+  width: 200px;
+  height: auto;
+  object-fit: contain;
 }
