--- a/src/app/[place]/placepage.module.css
+++ b/src/app/[place]/placepage.module.css
@@ -6,7 +6,7 @@
 
 .section h2 {
   font-size: 1.2rem;
-  color: var(--accent-colour);
+  color: var(--font-colour);
 }
 
 .section p {
@@ -15,12 +15,14 @@
 
 .BookingSection {
   background-color: var(--card-colour);
+  border-radius: 12px;
+  border: 1px solid var(--secondary-accent-colour);
   display: flex;
   flex-direction: column;
 }
 
 .BookingSection h2 {
-  color: var(--accent-colour);
+  color: var(--font-colour);
 }
 
 .image {
@@ -46,6 +48,11 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.section {
+  padding: 1rem;
+  margin: 0 0.5rem;
 }
 
 @media (min-width: 600px) {
