--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,8 +40,9 @@ body {
 .confirmButton {
   background-color: var(--card-colour);
   padding: 0.5rem 1rem;
-  border: 1px solid var(--accent-colour);
-  border-radius: 0.5rem;
+  border: 1px solid var(--secondary-accent-colour);
+  cursor: pointer;
+  border-radius: 50px;
   &:hover {
     background-color: var(--hover-colour);
     color: black;
