--- a/src/components/BookingForm.module.css
+++ b/src/components/BookingForm.module.css
@@ -2,7 +2,6 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   padding-bottom: 2rem;
 }
 
@@ -16,7 +15,7 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .bookingFormGroup {
@@ -25,12 +24,10 @@
   align-items: center;
 }
 
-.bookingFormGroup label {
-  background-color: inherit;
-}
-
 .bookingFormGroup input {
-  border: 1px solid var(--accent-colour);
+  border: 1px solid var(--secondary-accent-colour);
+  border-radius: 8px;
+  padding: 1ex;
   width: 100%;
 }
 
